--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@tldraw/core": "^1.23.2",
-    "@tldraw/tldraw": "^2.0.0-alpha.17",
+    "@tldraw/tldraw": "^2.0.0-beta.3",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "^18",
