--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@tldraw/core": "^1.23.2",
-    "@tldraw/tldraw": "^2.0.0-beta.3",
+    "@tldraw/tldraw": "^2.0.0-alpha.19",
     "firebase": "^10.8.0",
     "next": "14.1.0",
+    "npm-snapshot": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
